--- a/src/app/Bookings/booking/booking.component.css
+++ b/src/app/Bookings/booking/booking.component.css
@@ -11,7 +11,7 @@
 
 .content{
     width: 80%;
-    height:50vh;
+    height:60vh;
     display: flex;
     border: 1px solid gray;
     justify-content: space-between;
@@ -34,6 +34,7 @@
     display: flex;
     flex-direction: column;
     gap:20px;
+    height: 100%;
 
 }
 .formGroup{
