--- a/src/app/profile/edit-profile/edit-profile.component.html
+++ b/src/app/profile/edit-profile/edit-profile.component.html
@@ -28,7 +28,7 @@
                     <span *ngIf="form.get('email')!.errors!['email']">Please Enter a valid
                                       Email</span>
                 </div>
-
+<!-- 
                 <div class="input-group">
                     <div class="label-control">
                         <label for="password">Password</label>
@@ -41,7 +41,7 @@
                 <div class="error" *ngIf="!form.get('password')?.valid && form.get('password')?.touched ">
                     <span *ngIf="form.get('password')!.errors!['required']">Please enter a Password</span>
                     <span *ngIf="form.get('password')!.errors!['pattern']">Please enter a valid Password</span>
-                </div>
+                </div> -->
 
                 <div class="btn-style">
                     <button type="submit">UPDATE</button>
